--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/(main)/layout.tsx", ".next/types/app/(main)/(routes)/servers/[serverId]/layout.tsx", ".next/types/app/layout.tsx"],
   "exclude": ["node_modules"]
 }
