--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@livekit/components-react": "^2.2.1",
+    "@livekit/components-styles": "^1.0.12",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,8 +35,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.5.2",
+    "livekit-server-sdk": "^2.3.0",
     "lucide-react": "^0.344.0",
-    "next": "14.1.1",
+    "moment": "^2.30.1",
+    "next": "13.4.12",
     "next-themes": "^0.2.1",
     "query-string": "^9.0.0",
     "react": "^18",
@@ -56,7 +60,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "13.4.12",
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
